--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/v1/register, role: PUBLIC_ACCESS }
+        - { path: ^/api/v1/courses, role: PUBLIC_ACCESS }
         - { path: ^/api/v1/auth, roles: PUBLIC_ACCESS }
         - { path: ^/api/v1/doc, roles: PUBLIC_ACCESS }
         - { path: ^/api/v1/, roles: IS_AUTHENTICATED_FULLY }
